# flowthrone

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_and_install_tensorflow.py  setup.py
cmake/: FindTensorFlow.cmake  Protobuf_VERSION.cmake  gtest.cmake
docs/: 404.html  _config.yml  contents.md  index.md  installation.md  results.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
flowthrone/: __init__.py
flowthrone/config/: flowthrone.pbtxt
flowthrone/cpp/: evaluation.cpp  evaluation.h  evaluation_main.cpp  evaluation_test.cpp  evaluation_tool.cpp  flow_smoothing.cpp  flow_smoothing.h  flow_smoothing_test.cpp  io.cpp  io.h  io_test.cpp  optical_flow_main.cpp  optical_flow_model.cpp  optical_flow_model.h  optical_flow_tf_internal.cpp  optical_flow_tf_internal.h  optical_flow_tf_model.cpp  optical_flow_tf_model.h  optical_flow_tool.cpp  point_sequence.cpp  point_sequence.h  point_trajectory.cpp  point_trajectory.h  signal_handling.cpp  signal_handling.h  tensorflow_model_main.cpp  test_utils.cpp  test_utils.h  tf_utils.cpp  tf_utils.h  tf_utils_test.cpp  utils.cpp  utils.h  utils_test.cpp  visualization.cpp  visualization.h  visualization_test.cpp
flowthrone/proto/: flowthrone.proto
flowthrone/python/: __init__.py  augmentation.py  augmentation_test.py  common.py  dataset_utils.py  dataset_utils_test.py  flownet.py  flownet128.py  input_feeder.py  model_config.py  model_path_registry.py  model_path_registry_test.py  optical_flow_model.py  optical_flow_model_test.py  optical_flow_tool.py  pwcnet.py  pwcnet_test.py  pwcnet_train_tool.py  requirements.txt  tf_utils.py  tf_utils_test.py  train_tool.py  training_manager.py  utils.py  utils_test.py
flowthrone/python/blender/: README.md  blendbox.py  blender_utils.py  generate_groundtruth_flow.py
flowthrone/python/scripts/: prepare_dataset.py  prepare_flying_chairs.py
flowthrone/python/training/: augmentation_test.py  dataset_utils.py  get_model_from_checkpoint.py  pwcnet_train_tool.py  training_manager.py
webserver/: config.py  requirements.txt  server.py  utils.py
webserver/static/: stylesheet.css
webserver/templates/: base.html  demo.html  docs.html  examples.html  index.html  response.html  result.html  results.html
